Improved file recovery process and load balancing in distributed file system